--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -249,6 +249,14 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <!-- Prevent `gpg` from using pinentry programs
+                                    and avoid "gpg: signing failed: Inappropriate ioctl for device" error. -->
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
