Only uploads to Codacy if the CODACY_PROJECT_TOKEN env var is set. When running the workflow on Pull Requests, such a variable won't exist.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,4 +25,4 @@ jobs:
         run: |
           mvn clean verify -B -V -Pintegration-tests
           cd cloudsim-plus && mvn jacoco:report
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r target/site/jacoco/jacoco.xml
+          test -z $CODACY_PROJECT_TOKEN || bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r target/site/jacoco/jacoco.xml
