--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.cloudsimplus</groupId>
     <artifactId>cloudsim-plus-modules</artifactId>
-    <version>6.6.0</version>
+    <version>6.6.1</version>
     <packaging>pom</packaging>
 
     <name>CloudSim Plus Modules (All)</name>
@@ -65,6 +65,16 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <!-- The only module that can be deployed to Maven Central is "cloudsim-plus".
                  It's the only one that have all the configuration to execute the deploy.
                  However, when the "mvn deploy" command is executed from the root directory,
@@ -78,7 +88,7 @@
                  -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
+                <version>3.0.0-M1</version>
                 <configuration><skip>true</skip></configuration>
             </plugin>
 
