--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -509,21 +509,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.3.0-alpha4</version>
+            <version>1.3.0-alpha10</version>
         </dependency>
         <dependency>
+            <!-- Automatically includes slf4j-api 2.0 -->
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.8.0-beta2</version>
+            <version>1.3.0-alpha10</version>
         </dependency>
     </dependencies>
 
