--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,6 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: https://buymeacoff.ee/manoelcampos
+custom:
+  - https://paypal.me/manoelcampos
+  - https://buymeacoff.ee/manoelcampos
