--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,16 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           server-id: ossrh
+          # ~/.m2/settings.xml
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
           cache: 'maven'
       - id: install-secret-key
         name: Install gpg secret key
         run: | 
+          # The key to assing to OSSRH_GPG_SECRET_KEY can be got running on your PC: gpg -a --export-secret-keys KEY_ID
+          # The KEY_ID can be got from the GPG Keyhain.
+          # The OSSRH_GPG_SECRET_KEY_PASSWORD is in macOS keychain
           cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
           gpg --list-keys
       - name: Publish package
