--- a/pom.xml
+++ b/pom.xml
@@ -506,13 +506,13 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.3.0-alpha10</version>
+            <version>1.4.5</version>
         </dependency>
         <dependency>
             <!-- Automatically includes slf4j-api 2.0 -->
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha10</version>
+            <version>1.4.5</version>
         </dependency>
     </dependencies>
 
