Adds Lombok dependency
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -443,6 +443,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
