Update GitHub Issues link
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </scm>
 
     <issueManagement>
-        <url>http://github.com/cloudsimplus/cloudsimplus/issues</url>
+        <url>https://github.com/cloudsimplus/cloudsimplus/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
 
