--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,11 @@ jobs:
           cache: 'maven'
       - id: install-secret-key
         name: Install gpg secret key
-        run: | 
+        run: |
           # The key to assing to OSSRH_GPG_SECRET_KEY can be got running on your PC: gpg -a --export-secret-keys KEY_ID
           # The KEY_ID can be got from the GPG Keyhain.
-          # The OSSRH_GPG_SECRET_KEY_PASSWORD is in macOS keychain
+          # The OSSRH_GPG_SECRET_KEY_PASSWORD is in macOS keychain (GPG Key password)
+          # OSSRH_USERNAME and OSSRH_TOKEN (password) are available at ~/.m2/settings.xml 
           cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
           gpg --list-keys
       - name: Publish package
