--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.cloudsimplus</groupId>
-    <artifactId>cloudsim-plus</artifactId>
+    <artifactId>cloudsimplus</artifactId>
     <version>8.0.0</version>
 
     <name>CloudSim Plus API</name>
-    <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 8+ Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
+    <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 17+ Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
     <url>https://cloudsimplus.org</url>
 
     <organization>
