--- a/pom.xml
+++ b/pom.xml
@@ -265,7 +265,7 @@
                         <version>1.6.13</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>ossrh</serverId>
+                            <serverId>manoelcampos-ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <!--If the artifact will be automatically released to maven central after the upload to sonatype.-->
                             <autoReleaseAfterClose>false</autoReleaseAfterClose>
