Close #432 :: VM lifetime (PR #433)
Introduces Lifetimed, Startable and StartableAbstract class/interfaces

- Introduces a Vm lifeTime attribute (Cloudlet already had it)
- Makes Broker request VM destruction after reaching lifeTime
- Start and finishTime attributes were moved to the new Startable interface and StartableAbstract class. 
   Now such attributes are uniform between Cloudlet, Vm and Host.
- Makes CustomerEntity extends Lifetimed and Startable
- Redesign to provide a default implementation for Lifetimed.isLifeTimeReached

- Renames Cloudlet.getActualCpuTime to getTotalExecutionTime to conform to the Vm method. 
  That method is now defined inside CustomerEntity interface.
- Renames Cloudlet.execStartTime to startTime to conform to Vm.startTime
  to avoid confusion and provide uniformity to method names
- Renames Cloudlet.getWaitingTime to getStartWaitTime
- Renames Vm and Cloudlet (CustomerEntity) getWaitTime to getCreationWaitTime
- Renames Cloudlet and Vm getArrivedTime to getBrokerArrivalTime
- Renames Cloudlet.getArrivalTime to getDcArrivalTime 
- Renames Vm.stopTime to Vm.finishTime to conform to Cloudlet.finishTime
- Renames Host.shutdownTime to finishTime

- Fix test failures
- Version bump to 8.2.0

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.cloudsimplus</groupId>
     <artifactId>cloudsimplus</artifactId>
-    <version>8.1.0</version>
+    <version>8.2.0</version>
 
     <name>CloudSim Plus API</name>
     <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 17+ Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
@@ -100,7 +100,7 @@
                             <tags>
                                 <tag>
                                     <name>TODO</name>
-                                    <!-- TODO tag for all places -->
+                                    <!-- "to do" tag for all places -->
                                     <placement>a</placement>
                                     <head>To do something:</head>
                                 </tag>
@@ -138,7 +138,7 @@
                             <tags>
                                 <tag>
                                     <name>TODO</name>
-                                    <!-- TODO tag for all places -->
+                                    <!-- "to do" tag for all places -->
                                     <placement>a</placement>
                                     <head>To do something:</head>
                                 </tag>
@@ -220,7 +220,7 @@
                             <tags>
                                 <tag>
                                     <name>TODO</name>
-                                    <!-- TODO tag for all places -->
+                                    <!-- "to do" tag for all places -->
                                     <placement>a</placement>
                                     <head>To do something:</head>
                                 </tag>
@@ -297,7 +297,7 @@
                         <tags>
                             <tag>
                                 <name>TODO</name>
-                                <!-- TODO tag for all places -->
+                                <!-- "to do" tag for all places -->
                                 <placement>a</placement>
                                 <head>To do something:</head>
                             </tag>
@@ -530,7 +530,7 @@
                     <tags>
                         <tag>
                             <name>TODO</name>
-                            <!-- TODO tag for all places -->
+                            <!-- "to do" tag for all places -->
                             <placement>a</placement>
                             <head>To do something:</head>
                         </tag>
