--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,3 @@
 # There is not requirements.
-# The file is added just to informe snyk.io that there is not 
+# The file is added just to inform https://snyk.io that there is no
 # dependencies for the ReadTheDocs project.
