Update java distribution to Amazon Corretto on build.yml
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'corretto'
           java-version: 17
           cache: 'maven'
       - name: Maven Build
