--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-          server-id: manoelcampos-ossrh
+          server-id: central
           # ~/.m2/settings.xml
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
