--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Publish package to the Maven Central Repository
+name: Publish to Maven Central
 on:
   push:
     tags:
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Maven Central Repository
         uses: actions/setup-java@v4
         with:
-          java-version: '24'
+          java-version: '25'
           distribution: 'adopt'
           server-id: central
           # ~/.m2/settings.xml
